# wherethecar

./: README.md  build.gradle  settings.gradle
.github/workflows/: build-installers.yml
docs/: admin-refactoring-summary.md  futureFeatures.md  noteDump.md
docs/domain/: domain.md  er-diagram.md
gradle/wrapper/: gradle-wrapper.properties
server/: .env  Makefile  README.md  docker-compose.yml  hash-password.sh
server/database/: create.sql  database.mk  populate.sql  wipe.sql
server/file-api/: .env.example  .gitignore  Cargo.toml  Dockerfile  INTEGRATION.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  test-api.sh  verify-build.sh
server/file-api/src/: config.rs  handlers.rs  main.rs
src/main/java/: module-info.java
src/main/java/groupe1/il3/: App.java  Launcher.java  Main.java
src/main/java/groupe1/il3/app/: App.java
src/main/java/groupe1/il3/app/domain/agent/: Agent.java
src/main/java/groupe1/il3/app/domain/authentication/: AuthResult.java  PasswordHasher.java  SessionManager.java
src/main/java/groupe1/il3/app/domain/maintenance/: MaintenanceOperation.java
src/main/java/groupe1/il3/app/domain/reservation/: Reservation.java  ReservationStatus.java
src/main/java/groupe1/il3/app/domain/vehicle/: Energy.java  Status.java  Vehicle.java
src/main/java/groupe1/il3/app/persistence/: DatabaseConfig.java  DatabaseConnectionManager.java  DatabaseException.java
src/main/java/groupe1/il3/app/util/: PasswordHasher.java
src/main/resources/styles/: admin.css  calendar.css  header.css  login.css  main.css  navigation.css  reservations.css  vehicles.css
(+72 files in other folders)
