[package]
name = "file-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
tokio = { version = "1.41", features = ["full"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
mime_guess = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
